--- a/src/app/body-gear-items/body-gear-items.component.scss
+++ b/src/app/body-gear-items/body-gear-items.component.scss
@@ -1,13 +1,13 @@
 $gap: 32px;
 
-app-gear-item {
-  min-width: calc(50% - ($gap / 2));
-}
-
 .wrapper {
   width: 100%;
-
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
+
+  app-gear-item {
+    min-width: calc(50% - ($gap / 2));
+    height: 120px;
+  }
 }
