--- a/src/app/gear-item/gear-item.component.html
+++ b/src/app/gear-item/gear-item.component.html
@@ -1,7 +1,21 @@
-<mat-card class="item-card">
-  <div class="image-wrapper">
-    <img
-      src="https://t3.ftcdn.net/jpg/03/21/62/56/360_F_321625657_rauGwvaYjtbETuwxn9kpBWKDYrVUMdB4.jpg"
-    />
+<div
+  class="item-card"
+  [ngStyle]="{
+    'background-image':
+      'url(https://t3.ftcdn.net/jpg/03/21/62/56/360_F_321625657_rauGwvaYjtbETuwxn9kpBWKDYrVUMdB4.jpg)'
+  }"
+>
+  <div
+    class="content-wrapper"
+    [ngStyle]="{
+      'border-left': '24px solid ' + (item.rarity | gearRarityColor)
+    }"
+  >
+    <div class="attibute-wrapper">
+      <app-attribute-icon
+        *ngFor="let item of this.item.attributes"
+        [attribute]="item"
+      ></app-attribute-icon>
+    </div>
   </div>
-</mat-card>
+</div>
