--- a/src/app/gear-item/gear-item.component.scss
+++ b/src/app/gear-item/gear-item.component.scss
@@ -1,20 +1,24 @@
 $item-margin: 20px;
 
 .item-card {
-  height: 120px;
-  border-left: 24px solid green;
+  height: inherit;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 1px solid lightgray;
+  border-radius: 4px;
 
-  div.image-wrapper {
+  .content-wrapper {
+    display: flex;
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    position: absolute;
+    flex-direction: column-reverse;
+    border-radius: inherit;
 
-    img {
-      height: calc(100% - ($item-margin * 2));
-      margin: $item-margin;
-      width: fit-content;
+    .attibute-wrapper {
+      display: flex;
+      gap: 4px;
+      margin-left: 8px;
     }
   }
 }
