started on icons and improved styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-body-gear-items></app-body-gear-items>
+<div class="wrapper">
+  <h1>Division 2 - Build templates - Reinoud van Zoelen!</h1>
+  <app-body-gear-items></app-body-gear-items>
+</div>
