--- a/src/app/body-gear-items/body-gear-items.component.scss
+++ b/src/app/body-gear-items/body-gear-items.component.scss
@@ -6,8 +6,12 @@ $gap: 32px;
   flex-wrap: wrap;
   gap: $gap;
 
-  app-gear-item {
-    min-width: calc(50% - ($gap / 2));
-    height: 120px;
+  > div {
+    display: contents;
+
+    app-gear-item {
+      min-width: calc(50% - ($gap / 2));
+      height: 120px;
+    }
   }
 }
