consistently use the shared icons

--- a/src/app/attribute-icon/attribute-icon.component.html
+++ b/src/app/attribute-icon/attribute-icon.component.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
   <img
-    [src]="'../../assets/' + (this.attribute.type | attributeIcon) + '.png'"
+    *ngIf="this.icon"
+    [src]="this.iconSourceRepository.GetIconSourceFor(this.icon)"
   />
 </div>
