--- a/src/app/body-gear-item-picker/body-gear-item-picker.component.html
+++ b/src/app/body-gear-item-picker/body-gear-item-picker.component.html
@@ -3,7 +3,7 @@
     {{ this.slot }}
   </mat-tab>
   <mat-tab label="Set">
-    <img [src]="this.iconSourceRepository.GetIconSourceFor('backpack')" />
+    <img [src]="this.iconSourceRepository.GetIconSourceFor('offense1')" />
   </mat-tab>
   <mat-tab label="High end"> Content 3 </mat-tab>
 </mat-tab-group>
