--- a/src/app/gear-item/gear-item.component.scss
+++ b/src/app/gear-item/gear-item.component.scss
@@ -15,9 +15,11 @@ $item-margin: 20px;
     border-radius: inherit;
 
     .attibute-wrapper {
+      height: 28px;
+      width: fit-content;
       display: flex;
-      gap: 4px;
-      margin-left: 8px;
+      gap: 8px;
+      margin: 0 4px 8px;
     }
   }
 }
