--- a/src/app/gear-item/gear-item.component.scss
+++ b/src/app/gear-item/gear-item.component.scss
@@ -9,17 +9,31 @@ $item-margin: 20px;
 
   .content-wrapper {
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
-    flex-direction: column-reverse;
     border-radius: inherit;
+    position: relative;
+
+    .content-body {
+      margin: 8px;
+      color: lightgray;
+    }
 
     .attibute-wrapper {
-      height: 28px;
+      height: 24px;
       width: fit-content;
       display: flex;
-      gap: 8px;
-      margin: 0 4px 8px;
+      gap: 4px;
+      margin: 0 8px 8px;
+    }
+
+    .brand-icon {
+      position: absolute;
+      height: 50%;
+      right: 40px;
+      top: 10px;
     }
   }
 }
