real fetching parsing and showing of  data

--- a/src/app/body-gear-item-picker/body-gear-item-picker.component.html
+++ b/src/app/body-gear-item-picker/body-gear-item-picker.component.html
@@ -1,6 +1,13 @@
 <mat-tab-group (click)="$event.stopPropagation()">
   <mat-tab label="Exotic">
-    {{ this.slot }}
+    <mat-list role="list">
+      <mat-list-item
+        role="listitem"
+        *ngFor="let item of availableItems$ | async"
+      >
+        {{ item.name }}
+      </mat-list-item>
+    </mat-list>
   </mat-tab>
   <mat-tab label="Set">
     <img [src]="this.iconSourceRepository.GetIconSourceFor('offense1')" />
