--- a/src/app/body-gear-items/body-gear-items.component.html
+++ b/src/app/body-gear-items/body-gear-items.component.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
   <app-gear-item
     [item]="this.equipment.Mask"
-    [matMenuTriggerFor]="menu"
+    [matMenuTriggerFor]="menu_Mask"
   ></app-gear-item>
-  <mat-menu #menu="matMenu">
+  <mat-menu #menu_Mask="matMenu">
     <app-body-gear-item-picker
       [slot]="GearSlot.Mask"
     ></app-body-gear-item-picker>
@@ -11,9 +11,9 @@
 
   <app-gear-item
     [item]="this.equipment.Backpack"
-    [matMenuTriggerFor]="menu"
+    [matMenuTriggerFor]="menu_Backpack"
   ></app-gear-item>
-  <mat-menu #menu="matMenu">
+  <mat-menu #menu_Backpack="matMenu">
     <app-body-gear-item-picker
       [slot]="GearSlot.Backpack"
     ></app-body-gear-item-picker>
@@ -21,9 +21,9 @@
 
   <app-gear-item
     [item]="this.equipment.Vest"
-    [matMenuTriggerFor]="menu"
+    [matMenuTriggerFor]="menu_Vest"
   ></app-gear-item>
-  <mat-menu #menu="matMenu">
+  <mat-menu #menu_Vest="matMenu">
     <app-body-gear-item-picker
       [slot]="GearSlot.Vest"
     ></app-body-gear-item-picker>
@@ -31,9 +31,9 @@
 
   <app-gear-item
     [item]="this.equipment.Gloves"
-    [matMenuTriggerFor]="menu"
+    [matMenuTriggerFor]="menu_Gloves"
   ></app-gear-item>
-  <mat-menu #menu="matMenu">
+  <mat-menu #menu_Gloves="matMenu">
     <app-body-gear-item-picker
       [slot]="GearSlot.Gloves"
     ></app-body-gear-item-picker>
@@ -41,9 +41,9 @@
 
   <app-gear-item
     [item]="this.equipment.Holster"
-    [matMenuTriggerFor]="menu"
+    [matMenuTriggerFor]="menu_Holster"
   ></app-gear-item>
-  <mat-menu #menu="matMenu">
+  <mat-menu #menu_Holster="matMenu">
     <app-body-gear-item-picker
       [slot]="GearSlot.Holster"
     ></app-body-gear-item-picker>
@@ -51,9 +51,9 @@
 
   <app-gear-item
     [item]="this.equipment.KneePads"
-    [matMenuTriggerFor]="menu"
+    [matMenuTriggerFor]="menu_KneePads"
   ></app-gear-item>
-  <mat-menu #menu="matMenu">
+  <mat-menu #menu_KneePads="matMenu">
     <app-body-gear-item-picker
       [slot]="GearSlot.KneePads"
     ></app-body-gear-item-picker>
