Switch between items

--- a/src/app/body-gear-item-picker/body-gear-item-picker.component.scss
+++ b/src/app/body-gear-item-picker/body-gear-item-picker.component.scss
@@ -1,3 +1,10 @@
-mat-tab-group {
+.gear-picker-tab-group {
   width: 500px;
+  // background-color: rgb(54, 54, 54);
+  color: white;
+  margin: 0;
+
+  .exotic-tab {
+    color: red;
+  }
 }
