--- a/src/app/body-gear-item-picker/body-gear-item-picker.component.html
+++ b/src/app/body-gear-item-picker/body-gear-item-picker.component.html
@@ -1,42 +1,31 @@
-<mat-tab-group (click)="$event.stopPropagation()">
+<mat-tab-group class="gear-picker-tab-group" (click)="$event.stopPropagation()">
   <mat-tab label="Exotic">
-    <mat-list role="list">
-      <mat-list-item
-        role="listitem"
-        *ngFor="
-          let item of availableItems$
-            | async
-            | gearRarity : EquipmentRarity.Exotic
-        "
-      >
-        {{ item.name }}
-      </mat-list-item>
-    </mat-list>
+    <app-gear-item
+      *ngFor="
+        let item of availableItems$
+          | async
+          | gearRarity : EquipmentRarity.Exotic
+      "
+      [item]="item"
+      (click)="onClickItem(item)"
+    ></app-gear-item>
   </mat-tab>
   <mat-tab label="Set">
-    <mat-list role="list">
-      <mat-list-item
-        role="listitem"
-        *ngFor="
-          let item of availableItems$ | async | gearRarity : EquipmentRarity.Set
-        "
-      >
-        {{ item.name }}
-      </mat-list-item>
-    </mat-list>
+    <app-gear-item
+      *ngFor="
+        let item of availableItems$ | async | gearRarity : EquipmentRarity.Set
+      "
+      [item]="item"
+      (click)="onClickItem(item)"
+    ></app-gear-item>
   </mat-tab>
   <mat-tab label="Brand">
-    <mat-list role="list">
-      <mat-list-item
-        role="listitem"
-        *ngFor="
-          let item of availableItems$
-            | async
-            | gearRarity : EquipmentRarity.Brand
-        "
-      >
-        {{ item.name }}
-      </mat-list-item>
-    </mat-list>
+    <app-gear-item
+      *ngFor="
+        let item of availableItems$ | async | gearRarity : EquipmentRarity.Brand
+      "
+      [item]="item"
+      (click)="onClickItem(item)"
+    ></app-gear-item>
   </mat-tab>
 </mat-tab-group>
