--- a/src/app/body-gear-items/body-gear-items.component.html
+++ b/src/app/body-gear-items/body-gear-items.component.html
@@ -47,6 +47,6 @@
 </div>
 
 
-<button mat-button (click)="this.saveTemplate()">
+<!-- <button mat-button (click)="this.saveTemplate()">
   Save the template!
-</button>
+</button> -->
