--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
   <h1>Division 2 - Build templates - Reinoud van Zoelen!</h1>
+  <button (click)="this.CreateLoadout()">Store another!</button>
   <app-body-gear-items></app-body-gear-items>
 </div>
