--- a/src/app/body-gear-item-picker/body-gear-item-picker.component.scss
+++ b/src/app/body-gear-item-picker/body-gear-item-picker.component.scss
@@ -1,10 +1,6 @@
 .gear-picker-tab-group {
   width: 500px;
-  // background-color: rgb(54, 54, 54);
   color: white;
   margin: 0;
-
-  .exotic-tab {
-    color: red;
-  }
+  max-height: 600px;
 }
