Icons work yeah

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,7 @@
   app-body-gear-items {
     display: flex;
     align-items: flex-start;
-    width: 1000px;
+    width: 100%;
     padding: 20px;
   }
 }
