--- a/src/app/attribute-icon/attribute-icon.component.html
+++ b/src/app/attribute-icon/attribute-icon.component.html
@@ -1,6 +1,3 @@
 <div class="wrapper">
-  <img
-    *ngIf="this.icon"
-    [src]="this.iconSourceRepository.GetIconSourceFor(this.icon)"
-  />
+  <img [src]="this.attribute | icon | iconUrl" />
 </div>
