--- a/src/app/body-gear-items/body-gear-items.component.html
+++ b/src/app/body-gear-items/body-gear-items.component.html
@@ -1,83 +1,88 @@
 <div class="wrapper">
-  <app-gear-item
-    [item]="this.equipment.Mask"
-    #menuTrigger_Mask="matMenuTrigger"
-    [matMenuTriggerFor]="menu_Mask"
-  ></app-gear-item>
-  <mat-menu #menu_Mask="matMenu">
-    <app-body-gear-item-picker
-      [slot]="GearSlot.Mask"
-      (itemClicked)="this.equipment.Mask = $event; menuTrigger_Mask.closeMenu()"
-    ></app-body-gear-item-picker>
-  </mat-menu>
+  <div class="gear-items">
+    <app-gear-item
+      [item]="this.loadout.Mask"
+      #menuTrigger_Mask="matMenuTrigger"
+      [matMenuTriggerFor]="menu_Mask"
+    ></app-gear-item>
+    <mat-menu #menu_Mask="matMenu">
+      <app-body-gear-item-picker
+        [slot]="GearSlot.Mask"
+        (itemClicked)="this.loadout.Mask = $event; menuTrigger_Mask.closeMenu()"
+      ></app-body-gear-item-picker>
+    </mat-menu>
 
-  <app-gear-item
-    [item]="this.equipment.Backpack"
-    #menuTrigger_Backpack="matMenuTrigger"
-    [matMenuTriggerFor]="menu_Backpack"
-  ></app-gear-item>
-  <mat-menu #menu_Backpack="matMenu">
-    <app-body-gear-item-picker
-      [slot]="GearSlot.Backpack"
-      (itemClicked)="
-        this.equipment.Backpack = $event; menuTrigger_Backpack.closeMenu()
-      "
-    ></app-body-gear-item-picker>
-  </mat-menu>
+    <app-gear-item
+      [item]="this.loadout.Backpack"
+      #menuTrigger_Backpack="matMenuTrigger"
+      [matMenuTriggerFor]="menu_Backpack"
+    ></app-gear-item>
+    <mat-menu #menu_Backpack="matMenu">
+      <app-body-gear-item-picker
+        [slot]="GearSlot.Backpack"
+        (itemClicked)="
+          this.loadout.Backpack = $event; menuTrigger_Backpack.closeMenu()
+        "
+      ></app-body-gear-item-picker>
+    </mat-menu>
 
-  <app-gear-item
-    [item]="this.equipment.Chest"
-    #menuTrigger_Chest="matMenuTrigger"
-    [matMenuTriggerFor]="menu_Chest"
-  ></app-gear-item>
-  <mat-menu #menu_Chest="matMenu">
-    <app-body-gear-item-picker
-      [slot]="GearSlot.Chest"
-      (itemClicked)="
-        this.equipment.Chest = $event; menuTrigger_Chest.closeMenu()
-      "
-    ></app-body-gear-item-picker>
-  </mat-menu>
+    <app-gear-item
+      [item]="this.loadout.Chest"
+      #menuTrigger_Chest="matMenuTrigger"
+      [matMenuTriggerFor]="menu_Chest"
+    ></app-gear-item>
+    <mat-menu #menu_Chest="matMenu">
+      <app-body-gear-item-picker
+        [slot]="GearSlot.Chest"
+        (itemClicked)="
+          this.loadout.Chest = $event; menuTrigger_Chest.closeMenu()
+        "
+      ></app-body-gear-item-picker>
+    </mat-menu>
 
-  <app-gear-item
-    [item]="this.equipment.Gloves"
-    #menuTrigger_Gloves="matMenuTrigger"
-    [matMenuTriggerFor]="menu_Gloves"
-  ></app-gear-item>
-  <mat-menu #menu_Gloves="matMenu">
-    <app-body-gear-item-picker
-      [slot]="GearSlot.Gloves"
-      (itemClicked)="
-        this.equipment.Gloves = $event; menuTrigger_Gloves.closeMenu()
-      "
-    ></app-body-gear-item-picker>
-  </mat-menu>
+    <app-gear-item
+      [item]="this.loadout.Gloves"
+      #menuTrigger_Gloves="matMenuTrigger"
+      [matMenuTriggerFor]="menu_Gloves"
+    ></app-gear-item>
+    <mat-menu #menu_Gloves="matMenu">
+      <app-body-gear-item-picker
+        [slot]="GearSlot.Gloves"
+        (itemClicked)="
+          this.loadout.Gloves = $event; menuTrigger_Gloves.closeMenu()
+        "
+      ></app-body-gear-item-picker>
+    </mat-menu>
 
-  <app-gear-item
-    [item]="this.equipment.Holster"
-    #menuTrigger_Holster="matMenuTrigger"
-    [matMenuTriggerFor]="menu_Holster"
-  ></app-gear-item>
-  <mat-menu #menu_Holster="matMenu">
-    <app-body-gear-item-picker
-      [slot]="GearSlot.Holster"
-      (itemClicked)="
-        this.equipment.Holster = $event; menuTrigger_Holster.closeMenu()
-      "
-    ></app-body-gear-item-picker>
-  </mat-menu>
+    <app-gear-item
+      [item]="this.loadout.Holster"
+      #menuTrigger_Holster="matMenuTrigger"
+      [matMenuTriggerFor]="menu_Holster"
+    ></app-gear-item>
+    <mat-menu #menu_Holster="matMenu">
+      <app-body-gear-item-picker
+        [slot]="GearSlot.Holster"
+        (itemClicked)="
+          this.loadout.Holster = $event; menuTrigger_Holster.closeMenu()
+        "
+      ></app-body-gear-item-picker>
+    </mat-menu>
 
-  <app-gear-item
-    [item]="this.equipment.KneePads"
-    #menuTrigger_KneePads="matMenuTrigger"
-    [matMenuTriggerFor]="menu_KneePads"
-  ></app-gear-item>
-  <mat-menu #menu_KneePads="matMenu">
-    <app-body-gear-item-picker
-      [slot]="GearSlot.KneePads"
-      (itemClicked)="
-        this.equipment.KneePads = $event; menuTrigger_KneePads.closeMenu()
-      "
-    ></app-body-gear-item-picker>
-  </mat-menu>
+    <app-gear-item
+      [item]="this.loadout.KneePads"
+      #menuTrigger_KneePads="matMenuTrigger"
+      [matMenuTriggerFor]="menu_KneePads"
+    ></app-gear-item>
+    <mat-menu #menu_KneePads="matMenu">
+      <app-body-gear-item-picker
+        [slot]="GearSlot.KneePads"
+        (itemClicked)="
+          this.loadout.KneePads = $event; menuTrigger_KneePads.closeMenu()
+        "
+      ></app-body-gear-item-picker>
+    </mat-menu>
+  </div>
+  <div class="actions">
+    <button mat-raised-button (click)="this.CreateLoadout()">Create loadout!</button>
+  </div>
 </div>
