babys first media query

--- a/src/app/body-gear-items/body-gear-items.component.html
+++ b/src/app/body-gear-items/body-gear-items.component.html
@@ -83,6 +83,8 @@
     </mat-menu>
   </div>
   <div class="actions">
-    <button mat-raised-button (click)="this.CreateLoadout()">Create loadout!</button>
+    <button mat-raised-button (click)="this.SaveLoadout()">
+      Save loadout!
+    </button>
   </div>
 </div>
