--- a/src/app/body-gear-items/body-gear-items.component.scss
+++ b/src/app/body-gear-items/body-gear-items.component.scss
@@ -1,3 +1,5 @@
+@use "/src/app/mixins.scss" as *;
+
 $gap: 32px;
 $border-size: 1px;
 
@@ -11,12 +13,24 @@ $border-size: 1px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: $gap;
+    gap: calc($gap / 2);
 
     app-gear-item {
-      min-width: 400px;
+      min-width: 100%;
       height: 120px;
       border: $border-size solid lightgray;
+
+      @include md {
+        min-width: calc(50% - 20px);
+      }
+    }
+
+    @include md {
+      gap: $gap;
+
+      app-gear-item {
+        min-width: calc(50% - 20px);
+      }
     }
   }
 
