--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
+  align-items: center;
   background-color: rgb(54, 54, 54);
 
   h1 {
@@ -14,6 +15,5 @@
   app-body-gear-items {
     display: flex;
     align-items: flex-start;
-    width: 100%;
   }
 }
