--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
-  <h1>Division 2 - Build templates - Reinoud van Zoelen!</h1>
-  <app-body-gear-items></app-body-gear-items>
+<app-topbar></app-topbar>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
