--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar>
-  <span>Division 2 - Build Templates</span>
+  <span [routerLink]="'/'">Division 2 - Build Templates</span>
+
+  <div class="action-wrapper">
+    <button mat-raised-button [routerLink]="['/create']">
+      Create a new loadout
+    </button>
+  </div>
 </mat-toolbar>
