--- a/src/app/loadout-overview/loadout-overview.component.html
+++ b/src/app/loadout-overview/loadout-overview.component.html
@@ -1,5 +1,5 @@
 @for (item of (this.loadouts$ | async); track $index) {
-<div class="p-2">
+<div class="p-2 w-96">
   <app-loadout-overview-item [loadout]="item"></app-loadout-overview-item>
   <div class="mt-1 flex flex-row justify-end w-full">
     <button mat-raised-button [routerLink]="['/edit', item.id]">Edit</button>
